# wormhole

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  Makefile  README.md  analysis_options.yaml  distribute_options.yaml  index.md  justfile  pubspec.yaml  renovate.json
.github/actions/: _setup.yml
.github/actions/setup-flutter/: action.yml
.github/workflows/: build.yml  cd.yml  ci.yml  pages.yml  test-fastlane-ios.yml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/fastlane/: Appfile  Fastfile  README.md
docker/: Dockerfile  Dockerfile-linux
example/android/app/: build.gradle
example/lib/: main.dart
fastlane/: Fastfile
ios/: Podfile
ios/Runner/: AppDelegate.swift  FolderPickerPlugin.swift  Info.plist  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
ios/RunnerUITests/: RunnerUITests.swift
ios/ShareExtension/: Info.plist  ShareExtension.entitlements
ios/fastlane/: Appfile  Fastfile  Matchfile  README.md  Snapfile
lib/: flutter_close_app.dart  main.dart  navigation.dart  navigation_provider.dart
lib/l10n/: app_de.arb  app_en.arb  app_es.arb  app_et.arb  app_fr.arb  app_kab.arb  app_nl.arb  app_pt.arb  app_ru.arb  app_se.arb  app_sv.arb  app_uk.arb  app_zh.arb  app_zh_Hans.arb
lib/locale/: locale_provider.dart
lib/navigation/: back_pop_context.dart  disallow_pop_context.dart  navigation.dart  navigation_provider.dart
lib/pages/: connecting_page.dart  qr_scanner_page.dart  receive_page.dart  send_page.dart  settings_page.dart  type_helpers.dart
lib/pages/settings/: server_settings_page.dart  settings_page.dart
lib/pages/toasts/: base_toast.dart  error_toast.dart  info_toast.dart  my_toast.dart
lib/pages/transfer_widgets/: receive_finished.dart  transfer_code.dart  transfer_connecting.dart  transfer_error.dart  transfer_finished.dart  transfer_progress.dart  transfer_zip_progress.dart
lib/settings/: settings.dart
lib/theme/: dark_theme.dart  dark_theme_preference.dart  dark_theme_provider.dart  light_theme.dart  theme_data.dart  theme_provider.dart
lib/transfer/: demo_transfer.dart  transfer_provider.dart  transfer_receiver.dart
lib/utils/: code.dart  device.dart  file_formatter.dart  logger.dart  numerical_range_formatter.dart  paths.dart
lib/widgets/: fast_future_builder.dart  full_sized_text_input.dart  icon_text_button.dart  number_input.dart  settings_row.dart  settings_section_button.dart  split_button.dart
linux/: CMakeLists.txt  my_application.cc  rust.cmake
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/: build_rust.sh
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
native/: Cargo.toml
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs  impls.rs  lib.rs
native/src/wormhole/: handler.rs  helpers.rs  receive.rs  send.rs
native/src/wormhole/types/: value.rs
page/: _config.yml  config.yml  privacy_policy.md  terms_and_conditions.md
rust/: Cargo.toml  rust-toolchain.toml
rust/macros/src/: lib.rs
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: mod.rs  wormhole.rs
rust/src/wormhole/: handler.rs  helpers.rs  receive.rs  send.rs  zip.rs
rust/src/wormhole/types/: build_info.rs  value.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_wormhole.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_wormhole.podspec
rust_builder/windows/: CMakeLists.txt
scripts/: prepare-fdroid-build.sh
test/: file_formatter_test.dart  flutter_close_app_method_channel_test.dart  number_input_test.dart
test/screenshots/: screenshot_test.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+31 files in other folders)
