[package]
name = "rust_lib_wormhole"
version = "1.1.4"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.100"
flutter_rust_bridge = "=2.11.1"
magic-wormhole = "0.7.6"
futures = "0.3.31"
async-std = "1.12.0"
url = { version = "2.3.1", features = ["serde"] }
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }
macros = { path = "macros", version = "1" }
fastrand = "2.0.1"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = false       # Keep symbols for flutter_rust_bridge

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
