[package]
name = "rust_lib_wormhole"
version = "1.1.5"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.100"
flutter_rust_bridge = "=2.11.1"
magic-wormhole = {version = "0.7.6", features = ["tls", "transfer", "transit", "forwarding"]}
futures = "0.3.31"
async-std = "1.13.2"
url = { version = "2.5.7", features = ["serde"] }
zip = { version = "8.1.0", default-features = false, features = ["deflate"] }
macros = { path = "macros", version = "1" }
fastrand = "2.3.0"
flutter_logger = "0.6.1"
log = "0.4.28"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = false       # Keep symbols for flutter_rust_bridge

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
