[package]
name = "rust_lib_wormhole"
version = "1.1.5"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.102"
flutter_rust_bridge = "=2.12.0"
magic-wormhole = {version = "0.8.0", features = ["tls", "transfer", "transit"]}
serde = {version = "1.0.228", features = ["derive"]}
futures = "0.3.32"
async-std = "1.13.2"
url = { version = "2.5.8", features = ["serde"] }
zip = { version = "8.5.1", default-features = false, features = ["deflate"] }
macros = { path = "macros", version = "1" }
fastrand = "2.4.1"
flutter_logger = "0.6.1"
log = "0.4.29"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = false       # Keep symbols for flutter_rust_bridge

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
